[metadata]
name = django_toolchain
version = file:VERSION
author = Philipp Rollinger
author_email = rollinger@descript.de
description = Toolchain for django projects
long_description = file:README.rst
url = https://github.com/rollinger/django-toolchain
classifiers =
	Framework :: Django
	Development Status :: 1 - Development/Unstable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.7
install_requires =

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-flake8
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 1.0.1

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 8.2
	rst.linker >= 1.9

	# local

[options.entry_points]

[flake8]
ignore = E128,E731,W503,W504
max-line-length = 512
exclude=venv/

[tool:pytest]
DJANGO_SETTINGS_MODULE=tests.testapp.settings
norecursedirs=venv* .tox .eggs build dist django_extensions.egg-info django_extensions/mongodb
addopts = --doctest-modules --doctest-ignore-import-errors --nomigrations --cov=django_extensions --cov-report html --cov-report term

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_third_party = django
known_first_party = django_toolchains
multi_line_output = 5
line_length=128

[pycodestyle]
count = False
max-line-length = 512
statistics = True
ignore = D100,D101,D102,D103,D104,D105,D106,D107,D202,D203,D205,D210,D212,D400,D406,D407,D412,D413
